--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,77 @@
    width: 200px;
    height: auto;
 }
+.header {
+   height: 40px;
+   background-color: #56CCF2;
+   text-transform: uppercase;
+   font-family: Arial, Helvetica, sans-serif;
+   font-weight: 300;
+}
+.pageTitle {
+   float: left;
+   padding: 10px 20px;
+}
+.navigation {
+   display: flex;
+   padding: 10px 20px;
+   justify-content: flex-end;
+   text-transform: uppercase;
+   font-family: Arial, Helvetica, sans-serif;
+   font-weight: 300;
+}
+.navitem {
+   padding: 10px 20px;
+}
+body {
+   margin: 0;
+}
+h1 {
+   text-transform: uppercase;
+   font-family: Arial, Helvetica, sans-serif;
+   font-weight: 300;
+   margin: 24px;
+}
+.recipe {
+   border: 1px;
+   border: solid;
+   border-color: lightgray;
+   margin: 0 15px 15px 0;
+}
+.recipeContainer {
+   margin: 24px;
+}
+.recipeBox {
+   display: flex;
+   justify-content: flex-start;
+   font-family: Arial, Helvetica, sans-serif;
+}
+.myRecipeBox {
+   font-family: Arial, Helvetica, sans-serif;
+}
+.recipeContent {
+   margin: 24px;
+   max-width: 300px;
+}
+button {
+   background-color: #F2C94C;
+   width: 100%;
+   font-size: 14px;
+   text-transform: uppercase;
+   border-radius: 8px;
+   border: 0;
+   height: 30px;
+   margin-top: 24px;
+}
+a {
+   color: black;
+   text-decoration: none;
+   padding: 0 8px;
+   letter-spacing: 1px;
+}
+.footer {
+   display: flex;
+   justify-content: center;
+   background-color: rgb(174, 212, 236);
+   height: 40px;
+}
